--- a/Ansible/roles/10-install-docker/files/config.json
+++ b/Ansible/roles/10-install-docker/files/config.json
@@ -1,7 +1,7 @@
 {
     "auths": {
             "hub.dayu-boss.com:10443": {
-                    "auth": "Z3Vlc3Q6R3Vlc3RAMTIz"
+                    "auth": "Z3V****c3RAMTIz"
             }
     },
     "HttpHeaders": {
